# quant-server-mt5

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: cd-azure.yml  ci-cd-gcp.yml  ci-cd.yml  ci.yml  deploy-azure-mt5.yml  deploy.yml  master-pipeline.yml
.github/workflows/CI/: CD.yml
alembic/: env.py
alembic/versions/: 39034e24f0a1_add_type_to_positions.py  3ea359b7d5cb_initial_schema.py  45b140fb9980_add_signup_session_table.py  49eb1d5383fe_add_active_status_to_positions.py  b35b2aaf06e9_add_strategy_subscription_and_multi_.py  c84a5ae626ef_add_market_field_to_alerts_and_watchlist.py  e9466a58e990_make_all_datetime_columns_timezone_aware.py
docs/: apis.md  architecture.md  cicd.md  database.md  development.md  hybrid_setup.md  infrastructure.md  jobs.md  logging.md  metrics.md  secrets_setup.md  services.md
infra/compose/: docker-compose.yml
infra/docker/: base.Dockerfile  mt5-base.Dockerfile
infra/docker/core_service/: docker-compose.yml
infra/docker/core_with_db/: docker-compose.yml
infra/docker/execution_service/: docker-compose.yml
infra/docker/influxdb/: docker-compose.yml
infra/docker/messaging_service/: docker-compose.yml
infra/envs/: core.env.example  execution.env.example  messaging.env.example  mt5.env.example  shared.env.example
infra/prometheus/: prometheus.yml
infra/scripts/: sync_secrets.sh
infra/terraform/: .terraform.lock.hcl  azure_backend.tf  azure_main.tf  azure_variables.tf  backend.tf  common_variables.tf  main.tf  variables.tf  versions.tf
libs/common_config/: pyproject.toml
libs/common_events/: pyproject.toml
libs/common_logging/: pyproject.toml
libs/common_models/: pyproject.toml
mt5_ea/: client.mq5  sync.mq5
scripts/: check_influx.py  clean_db.py  seed_data.py  setup-hooks.sh  sync_mt5_records.py
services/core_service/: Dockerfile  README.md  pyproject.toml
services/core_service/app/: main.py
services/core_service/app/alembic/: env.py
services/core_service/app/alembic/versions/: 3ea359b7d5cb_initial_schema.py  45b140fb9980_add_signup_session_table.py  c84a5ae626ef_add_market_field_to_alerts_and_watchlist.py
services/core_service/app/core/: config.py  database.py  signal_dispatcher.py
services/core_service/app/infra/: database.py
services/core_service/app/models/: __init__.py  alert.py  auth.py  trading.py  user.py  watchlist.py
services/core_service/app/repos/: alert_repo.py  base.py  signup_repo.py  user_repo.py  watchlist_repo.py
services/core_service/app/repositories/: alert_repo.py  base.py  signup_repo.py  user_repo.py  watchlist_repo.py
services/core_service/tests/: test_core_health.py
services/execution_service/: Dockerfile  README.md  pyproject.toml
services/execution_service/app/: main.py
services/execution_service/app/execution_queue/: queue.py
services/execution_service/app/services/: sync_db_service.py  trading_service.py
services/execution_service/app/trade_db/: __init__.py  api.py
services/execution_service/app/utils/: forex.py  health.py  indicators.py  logging_config.py  strategy.py  visualization.py
services/execution_service/app/whatsapp/: __init__.py  message.py  utils.py
services/execution_service/tests/: test_execution_health.py
services/messaging_service/: Dockerfile  README.md  pyproject.toml
services/messaging_service/app/: main.py
services/messaging_service/app/agent/: __init__.py  agent_graph.py  tools.py
services/messaging_service/app/core/: bot_service.py  config.py  trading_notifications.py  whatsapp_service.py
services/messaging_service/app/core/agent/: tools.py
services/messaging_service/app/infra/whatsapp/: __init__.py  message.py  utils.py
services/messaging_service/app/services/: bot_service.py  whatsapp_service.py
services/messaging_service/app/whatsapp/: message.py  msg_types.py  utils.py
services/messaging_service/tests/: test_messaging_health.py
services/mt5_service/: Dockerfile  __init__.py  entrypoint.sh  pyproject.toml
services/sync_service/: Dockerfile  entrypoint.sh  pyproject.toml
services/sync_service/app/: main.py
services/sync_service/app/api/: sync.py
services/sync_service/app/core/: config.py  influx_service.py  metrics.py  mt5_client.py  sync_service.py  trading_service.py
services/sync_service/app/core/workers/: health.py  monitoring.py  publishing.py
services/sync_service/app/infra/: forex.py  health.py  indicators.py  strategy.py  trading_utils.py  visualization.py
services/sync_service/app/models/: schemas.py
services/sync_service/app/services/: influx_service.py  mt5_client.py  sync_service.py  trading_service.py
services/sync_service/app/utils/: health.py  logging_config.py  visualization.py
services/sync_service/app/workers/: health.py  monitoring.py  publishing.py
static/css/: style.css
static/js/: app.js
templates/: admin.html  dashboard.html  index.html  portfolio.html
tests/: conftest.py
tests/core/: test_endpoints.py  test_orders_positions.py
tests/execution/: test_logic.py
tests/messaging/: test_messaging_logic.py  test_webhook.py
tests/mt5/: test_api.py  test_mt5_service.py  test_sync_service.py
(+33 files in other folders)
