[project]
name = "financial-whatsapp-chatbot"
version = "0.1.0"
description = "Microservices-based financial WhatsApp chatbot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic>=2.6.0",
    "sqlalchemy>=2.0.25",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "python-dotenv>=1.0.1",
    "rich>=13.7.0",
    "httpx>=0.26.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.0.2",
    "langgraph>=0.0.15",
    "psycopg2-binary>=2.9.11",
    "pandas>=2.2.0",
    "jinja2>=3.1.6",
    "python-multipart>=0.0.9",
    "influxdb-client>=1.40.0",
    "plotly>=5.18.0",
    "common-logging",
    "common-config",
    "common-events",
    "common-models",
]

[tool.uv.workspace]
members = [
    "services/*",
    "libs/*",
]

[tool.uv.sources]
common-logging = { workspace = true }
common-config = { workspace = true }
common-events = { workspace = true }
common-models = { workspace = true }

[dependency-groups]
dev = [
    "aiosqlite>=0.22.1",
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-clarity>=1.0.1",
    "pytest-mock>=3.15.1",
    "pytest-sugar>=1.1.1",
    "ruff>=0.9.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [
    ".",
    "services/core_service/app",
    "services/execution_service/app",
    "services/messaging_service/app",
]
filterwarnings = [
    "ignore::DeprecationWarning:langgraph",
]
