[project]
name = "execution-service"
version = "0.1.0"
dependencies = [
    "common-logging",
    "common-config",
    "common-events",
    "fastapi",
    "uvicorn",
    "pandas",
    "influxdb-client",
    "plotly",
    "jinja2",
    "httpx>=0.28.1",
]

[tool.uv.sources]
common-logging = { workspace = true }
common-config = { workspace = true }
common-events = { workspace = true }
