[project]
name = "messaging-service"
version = "0.1.0"
dependencies = [
    "common-logging",
    "common-config",
    "common-events",
    "fastapi",
    "uvicorn",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
    "httpx",
    "langchain",
    "langchain-openai",
    "langgraph",
]

[tool.uv.sources]
common-logging = { workspace = true }
common-config = { workspace = true }
common-events = { workspace = true }
