[project]
name = "sync-service"
version = "0.1.0"
dependencies = [
    "fastapi",
    "uvicorn",
    "httpx",
    "influxdb-client",
    "pandas",
    "plotly",
    "jinja2",
    "pydantic-settings",
    "rich",
    "common-logging",
    "common-events",
    "prometheus-fastapi-instrumentator>=7.0.0",
    "prometheus-client>=0.20.0",
]

[tool.uv.sources]
common-logging = { workspace = true }
common-events = { workspace = true }
